# qv

./: CMakeLists.txt  LICENSE  README.md  color.cpp  color.hpp  colormap-diverging-0.csv  colormap-diverging-1.csv  colormap-diverging-2.csv  colormap-diverging-3.csv  colormap-qualitative-0.csv  colormap-qualitative-1.csv  colormap-sequential-0.csv  colormap-sequential-1.csv  colormap-sequential-2.csv  colormap-sequential-3.csv  colormap.cpp  colormap.hpp  create-default-colormaps.sh  file.cpp  file.hpp  frame.cpp  frame.hpp  gl.cpp  gl.hpp  gui.cpp  gui.hpp  histogram.cpp  histogram.hpp  main.cpp  overlay-colormap.cpp  overlay-colormap.hpp  overlay-fallback.cpp  overlay-fallback.hpp  overlay-help.cpp  overlay-help.hpp  overlay-histogram.cpp  overlay-histogram.hpp  overlay-info.cpp  overlay-info.hpp  overlay-statistic.cpp  (+26 more)
aux/: de.marlam.qv.metainfo.xml
res/: de.marlam.qv.desktop  de.marlam.qv.metainfo.xml
src/: alloc.cpp  alloc.hpp  color.hpp  colormap.cpp  colormap.hpp  file.cpp  file.hpp  frame.cpp  frame.hpp  gl.cpp  gui.cpp  gui.hpp  histogram.cpp  histogram.hpp  main.cpp  overlay-colormap.cpp  overlay-colormap.hpp  overlay-fallback.cpp  overlay-fallback.hpp  overlay-histogram.cpp  overlay-histogram.hpp  overlay-info.cpp  overlay-info.hpp  overlay-statistic.cpp  overlay-statistic.hpp  overlay-value.cpp  overlay-value.hpp  overlay.cpp  overlay.hpp  parameters.cpp  parameters.hpp  qv.cpp  qv.hpp  set.cpp  shader-overlay-vertex.glsl  shader-quadtree-vertex.glsl  shader-view-fragment.glsl  shader-view-vertex.glsl  statistic.cpp  statistic.hpp  (+1 more)
